Cosmetics of Weekly Dashboard

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -196,7 +196,7 @@
             $("#dsb_hl").click(dashboard_hl_init);
 
             // fast-load dashboard:
-            dashboard_hl_init();  //@@ 
+            dashboard_hl_init();    // @@
         });
 
 
@@ -572,8 +572,8 @@
                         <h2> &nbsp; &nbsp;מבט שבועי</h2>
                         <div class="col-sm-3">
                             <div class="form-group">
-                                <label class="col-sm-2">&nbsp;</label>
-                                <label class="col-sm-2" style="padding: 0.5em 0px;">שבוע</label>
+                                <label class="col-sm-4">&nbsp;</label>
+                                <label class="col-sm-2" style="padding: 0.5em 0px;">בחרו שבוע:</label>
                                 <div class="col-sm-4">
                                     <input type="text" id="dsb_select_week" placeholder="..." class="form-control">
                                 </div>
@@ -627,7 +627,7 @@
                             <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_vols"> --        </div>
                         </div>
                         <div class="col-sm-1">
-                            <div class="row">מתנדבים חדשים          </div>
+                            <div class="row">מתוכם מתנדבים חדשים          </div>
                             <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_new">--             </div>
                             <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_new">--</div>
                             <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_new">--         </div>
@@ -689,7 +689,7 @@
                             <div class="row" id="dsb_hl_monthly_tbl_yoy_vols"> --        </div>
                         </div>
                         <div class="col-sm-1">
-                            <div class="row">מתנדבים חדשים          </div>
+                            <div class="row">מתוכם מתנדבים חדשים          </div>
                             <div class="row" id="dsb_hl_monthly_tbl_curr_new">--             </div>
                             <div class="row" id="dsb_hl_monthly_tbl_prev_new">--</div>
                             <div class="row" id="dsb_hl_monthly_tbl_yoy_new">--         </div>
