--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1696,6 +1696,8 @@
                             },
                             { targets: 6, className: 'last-modified_td' },
                             { "targets": [8], visible: false },
+                            { targets: [9], orderable: false }
+
                         ],
                     });
 
@@ -1803,7 +1805,7 @@
                             },
                             { targets: 6, className: 'last-modified_td' },
                             { targets: [8], visible: false },
-
+                            { targets: [9], orderable: false }
                         ],
                         autoWidth: false,
 
@@ -1894,9 +1896,11 @@
                             { targets: 7, className: 'last-modified_td' },
                             { targets: 8, className: 'text-left-strong' },
                             { targets: [9], visible: false },
+                            { targets: [10], orderable: false }
 
                         ],
                         autoWidth: false,
+
 
                     });
 
@@ -1948,6 +1952,7 @@
                             { targets: 7, className: 'last-modified_td' },
                             { targets: 7, type: 'last_modifiedSort' },
                             { targets: [9], visible: false },
+                            { targets: [10], orderable: false }
                         ],
                         autoWidth: false,
 
