A few small fixes (Amir 1-May)

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -196,7 +196,7 @@
             $("#dsb_hl").click(dashboard_hl_init);
 
             // fast-load dashboard:
-            dashboard_hl_init();  // @@
+            // dashboard_hl_init();  
         });
 
 
