assign driver from manageridepats page module V2 - needs more work
finish work on style
next thing is to events handling

--- a/Road to Recovery/pages/assignDriverModal.html
+++ b/Road to Recovery/pages/assignDriverModal.html
@@ -4,7 +4,7 @@
             <button id="overRideBS_modal_4changeClose_x" type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
-            <h2 class="modal-title">רישום נהג להסעה</h2>
+            <h2 class="modal-title">שיבוץ נהג להסעה</h2>
         </div>
         <div class="modal-body">
             <input placeholder="הזן שם" id="driver" name="driver" autocomplete="off" >
