assign driver from manageridepats page module V3- needs more work
finish work on events handling

--- a/Road to Recovery/pages/assignDriverModal.html
+++ b/Road to Recovery/pages/assignDriverModal.html
@@ -11,7 +11,7 @@
         </div>
         <div class="text-right modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול</button>
-            <button type="button" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
+            <button type="button" onclick="assignDriverToRidePat()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
         </div>
     </div>
 </div>
