--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -2637,7 +2637,9 @@
     <script src="../plugins/datatables/dataTables.bootstrap.js"></script>
     <script src="../plugins/datatables/dataTables.buttons.min.js"></script>
     <script src="../plugins/datatables/buttons.bootstrap.min.js"></script>
-    <script src="../plugins/datatables/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.0/jszip.min.js"
+            integrity="sha512-xcHCGC5tQ0SHlRX8Anbz6oy/OullASJkEhb4gjkneVpGE3/QGYejf14CUO5n5q5paiHfRFTa9HKgByxzidw2Bw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../plugins/datatables/pdfmake.min.js"></script>
     <script src="../plugins/datatables/vfs_fonts.js"></script>
     <script src="../plugins/datatables/buttons.html5.min.js"></script>
